--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -30,6 +30,7 @@ lista.vacia=Empty List
 login.login=Authenticate
 login.password=Password
 login.username=User
+producto.pruebas=Test
 plantilla.bienvenido=User
 plantilla.categorias=Categories
 plantilla.derechos=TechShop All Rights Reserved 2024
