--- a/src/main/resources/messages_es.properties
+++ b/src/main/resources/messages_es.properties
@@ -31,6 +31,7 @@ login.login=Autenticar
 login.password=Contrase\u00f1a
 login.username=Usuario
 plantilla.bienvenido=Usuario
+producto.pruebas=Pruebas
 plantilla.categorias=Categorias
 plantilla.derechos=TechShop Derechos Reservados 2024
 plantilla.productos=Productos
